--- a/REACT/react-test/src/DettaglioProdotto/DettaglioProdotto.css
+++ b/REACT/react-test/src/DettaglioProdotto/DettaglioProdotto.css
@@ -39,6 +39,7 @@
   border: none;
   border-radius: 8px;
   height: auto;
+  width: 350px;
   padding: 0px 30px 30px 30px;
   margin-top: 30px;
   margin-left: 15px;
