--- a/REACT/react-test/src/DettaglioProdotto/DettaglioProdotto.scss
+++ b/REACT/react-test/src/DettaglioProdotto/DettaglioProdotto.scss
@@ -34,6 +34,7 @@ $price: #2C2C2C;
 			border: none;
 			border-radius: 8px;
 			height: auto;
+			width: 350px;
 			padding: 0px 30px 30px 30px;
 			margin-top: 30px;
 			margin-left: 15px;
