--- a/REACT/react-test/src/Shop/BarraRicerca/BarraRicerca.css
+++ b/REACT/react-test/src/Shop/BarraRicerca/BarraRicerca.css
@@ -4,10 +4,10 @@
   width: auto;
   height: 62px;
   background: #FFFFFF;
-  position: absolute;
+  position: relative;
   top: 30px;
-  left: 430px;
-  right: 30px;
+  left: 30px;
+  margin-right: 60px;
   color: #2C2C2C;
   -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
