--- a/REACT/react-test/src/Shop/Filtri/Filtri.scss
+++ b/REACT/react-test/src/Shop/Filtri/Filtri.scss
@@ -32,6 +32,9 @@ $button-clearfilters-text: #FFFFFF;
 		
 		&:hover {
 			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+			color: $button-clearfilters;
+			background: $button-clearfilters-text;
+			border: 1px solid $button-clearfilters;
 		}
 	}
 }
