--- a/REACT/react-test/src/Shop/Prodotti/Prodotti.scss
+++ b/REACT/react-test/src/Shop/Prodotti/Prodotti.scss
@@ -2,7 +2,8 @@
 	display: flex;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
-	position: absolute;
-	top: 105px;
-	left: 415px;
+	position: relative;
+	top: 45px;
+	left: 15px;
+	margin-right: 35px;
 }
