--- a/REACT/react-test/src/Shop/Filtri/Filtri.css
+++ b/REACT/react-test/src/Shop/Filtri/Filtri.css
@@ -33,5 +33,8 @@
 .filtri .clearfilters:hover {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: #6F64F8;
+  background: #FFFFFF;
+  border: 1px solid #6F64F8;
 }
 /*# sourceMappingURL=Filtri.css.map */
