Added quantita in dettaglio prodotto

--- a/REACT/react-test/src/DettaglioProdotto/DettaglioProdotto.css
+++ b/REACT/react-test/src/DettaglioProdotto/DettaglioProdotto.css
@@ -57,6 +57,22 @@
           box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
+.dettaglioprodotto .section1 .details select {
+  border: none;
+  border-radius: 8px;
+  padding: 4px 8px 4px 8px;
+  background-color: #6F64F8;
+  color: #FFFFFF;
+}
+
+.dettaglioprodotto .section1 .details select::after {
+  border-color: transparent transparent #FFFFFF transparent;
+}
+
+.dettaglioprodotto .section1 .details select:focus {
+  border-radius: 8px 8px 0px 0px;
+}
+
 .dettaglioprodotto .section1 .details .titolo {
   margin-top: 50px;
   color: #2C2C2C;
