--- a/REACT/react-test/src/Nav/Nav.scss
+++ b/REACT/react-test/src/Nav/Nav.scss
@@ -1,6 +1,4 @@
-$background-nav: #FFFFFF;
-$nav-text: #2C2C2C;
-$nav-hover-border: #6F64F8;
+@import "../variables";
 
 .nav {
 	border-radius: 8px;
