--- a/REACT/react-test/src/Shop/BarraRicerca/BarraRicerca.scss
+++ b/REACT/react-test/src/Shop/BarraRicerca/BarraRicerca.scss
@@ -1,6 +1,4 @@
-$background-barradiricerca: #FFFFFF;
-$border-search: #2C2C2C;
-$text: #2C2C2C;
+@import "../../variables";
 
 .barraricerca {
 	border: none;
