--- a/REACT/react-test/src/Shop/Filtri/Categorie/Categoria/Categoria.scss
+++ b/REACT/react-test/src/Shop/Filtri/Categorie/Categoria/Categoria.scss
@@ -1,6 +1,4 @@
-$background-section-filter: #FFFFFF;
-$border-radio: #979797;
-$background-radio-checked: #6F64F8;
+@import "../../../../variables";
 
 .categoria {
     input[type="checkbox"] {
