--- a/REACT/react-test/src/Shop/Filtri/Categorie/Categorie.scss
+++ b/REACT/react-test/src/Shop/Filtri/Categorie/Categorie.scss
@@ -1,5 +1,4 @@
-$border-radio: #979797;
-$price-title-text: #2C2C2C;
+@import "../../../variables";
 
 .categorie {
     border-top: 1px solid $border-radio;
