--- a/REACT/react-test/src/Shop/Filtri/Filtri.css
+++ b/REACT/react-test/src/Shop/Filtri/Filtri.css
@@ -24,7 +24,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  background: #6F64F8;
+  background: #007CC3;
   color: #FFFFFF;
   -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
@@ -33,8 +33,8 @@
 .filtri .clearfilters:hover {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  color: #6F64F8;
+  color: #007CC3;
   background: #FFFFFF;
-  border: 1px solid #6F64F8;
+  border: 1px solid #007CC3;
 }
 /*# sourceMappingURL=Filtri.css.map */
