--- a/REACT/react-test/src/Shop/Filtri/Filtri.scss
+++ b/REACT/react-test/src/Shop/Filtri/Filtri.scss
@@ -1,6 +1,4 @@
-$background-section-filter: #FFFFFF;
-$button-clearfilters: #6F64F8;
-$button-clearfilters-text: #FFFFFF;
+@import "../../variables";
 
 .filtri {
 	position: relative;
