--- a/REACT/react-test/src/Shop/Filtri/Prezzi/Prezzi.scss
+++ b/REACT/react-test/src/Shop/Filtri/Prezzi/Prezzi.scss
@@ -1,7 +1,4 @@
-$background-section-filter: #FFFFFF;
-$price-title-text: #2C2C2C;
-$border-radio: #979797;
-$background-radio-checked: #6F64F8;
+@import "../../../variables";
 
 .prezzi {
 	label {
