migliorata navbar (colori da cambiare)

--- a/react-app/src/components/Nav/Nav.scss
+++ b/react-app/src/components/Nav/Nav.scss
@@ -1,46 +1,181 @@
 @import "/src/scss/variables";
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600');
 
-.nav {
-	border-radius: 8px;
-	height: 62px;
-	margin: 30px 30px 0px 30px;
-	padding: 10px 40px 10px 40px;
-	display: flex;
-	flex-direction: row;
-	background: $background-nav;
-	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 
-	img {
-		object-fit: cover;
-		width: auto;
-		height: 65px;
-		display: block;
-	}
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+	font-family: 'Work Sans', sans-serif;
+	font-weight: 400;
+}
+
+header {
+	text-align: center;
+	position: fixed;
+	z-index: 999;
+	width: 100%;
+	background-color: lightblue;
+}
+
+nav {
+	position: absolute;
+	text-align: left;
+	top: 100%;
+	left: 0;
+	background: lightblue;
+	width: 100%;
+	transform: scale(1, 0);
+	transform-origin: top;
+	transition: transform 400ms ease-in-out;
 
 	ul {
-		list-style-type: none;
-		margin: 0px 0px 0px 30px;
+		margin: 0;
 		padding: 0;
-		overflow: hidden;
-
-		li {
-			float: left;
-			display: block;
-			color: $nav-text;
-			text-align: center;
-			padding: 16px 15px 16px 15px;
-			text-decoration: none;
-			&:hover {
-				border-bottom: 1px solid $nav-hover-border;
-				color: $nav-hover-border;
-			}
-		}
+		list-style-type: none;
 	}
 
-	.cart {
+	li {
+		margin-bottom: 1em;
+		margin-left: 1em;
+	}
+
+	a {
+		color: black;
+		text-decoration: none;
+		font-size: 0.92rem;
+		text-transform: uppercase;
+		opacity: 0;
+		transition: opacity 150ms ease-in-out;
+	}
+
+	a:hover {
+		color: red;
+	}
+
+}
+
+.nav-toggle:checked ~ nav {
+	transform: scale(1, 1);
+}
+
+.nav-toggle {
+	position: absolute !important;
+	top: -9999px !important;
+	left: -9999px !important;
+}
+
+
+.nav-toggle-label {
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin-left: 1em;
+	height: 100%;
+	display: flex;
+	align-items: center;
+}
+
+.nav-toggle-label span,
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+	display: block;
+	background: white;
+	height: 2px;
+	width: 2em;
+	border-radius: 2px;
+	position: relative;
+}
+
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+	content: "";
+	position: absolute;
+}
+
+.nav-toggle-label span::before {
+	bottom: 7px;
+}
+
+.nav-toggle-label span::after {
+	top: 7px;
+}
+
+.nav-toggle:checked ~ nav a {
+	opacity: 1;
+	transition: opacity 250ms ease-in-out 200ms;
+}
+
+@media screen and (min-width: 800px) {
+	.nav-toggle-label {
+		display: none;
+	}
+
+	header {
+		display: grid;
+		grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
+	}
+
+	.logo {
+		grid-column: 2 / 3;
+	}
+
+	nav {
+		all: unset;
+		grid-column: 3 / 4;
+		display: flex;
+		justify-content: flex-end;
+		align-items: center;
+	}
+
+	nav ul {
+		display: flex;
+	}
+
+	nav li {
+		margin-left: 3em;
+		margin-bottom: 0;
+	}
+
+	nav a {
+		opacity: 1;
+		position: relative;
+	}
+
+	nav a::before {
+		content: '';
+		display: block;
+		height: 5px;
+		background-color: black;
 		position: absolute;
-		top: 55px;
-		right: 75px;
-		color: $nav-hover-border;
+		bottom: -.75em;
+		left: 0;
+		right: 0;
+		transform: scale(0, 1);
+		transform-origin: left;
+		transition: transform ease-in-out 250ms;
 	}
+
+	nav a:hover::before {
+		transform: scale(1,1);
+	}
+
+	#shoppingCart {
+		position: absolute;
+		top: 50%;
+		transform: translate(0, -50%);
+	}
+}
+
+#shoppingCart {
+	position: absolute;
+	right: 2em;
+	top: 50%;
+	transform: translate(0, -50%);
+}
+
+#logo {
+	width: 5rem;
 }
