--- a/react-app/src/components/Shop/Shop.scss
+++ b/react-app/src/components/Shop/Shop.scss
@@ -1,10 +1,65 @@
+@import "/src/scss/variables";
+
 .all {
     display: flex;
     flex-direction: row;
+    position: absolute;
+    top: 100px;
 
     .prod {
         display: flex;
         flex-direction: column;
         flex-grow: 1;
     }
+}
+
+.barraricerca {
+	border: none;
+	border-radius: 8px;
+	width: auto;// 1171px;
+	height: 62px;
+	background: $background-barradiricerca;
+	position: relative;
+	top: 30px;
+	left: 30px;
+	margin-right: 60px;
+	color: $text;
+	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+
+	&:hover {
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	}
+
+	input[type="text"] {
+		border: none;
+		background: none;
+		width: 90%;
+		height: 62px;
+		margin: auto;
+		padding-left: 30px;
+		padding-right: 30px;
+		font-size: 22px;
+	}
+
+	button {
+		border: none;
+		border-left: 1px solid $border-search;
+		width: auto;
+		height: auto;
+		background: none;
+		padding: 18px 30px 18px 30px;
+		position: absolute;
+		right: 0px;
+		top: 0px;
+	}
+}
+
+.prodotti {
+	display: flex;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+	position: relative;
+	top: 45px;
+	left: 15px;
+	margin-right: 35px;
 }
