--- a/react-app/src/components/Shop/Prodotto/Prodotto.scss
+++ b/react-app/src/components/Shop/Prodotto/Prodotto.scss
@@ -1,8 +1,8 @@
+@use '../../../scss/index';
 
 .card {
     width: 15rem;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
+    background: white;
 }
 
 .product-image {
