--- a/react-app/src/components/Shop/Shop.scss
+++ b/react-app/src/components/Shop/Shop.scss
@@ -28,7 +28,7 @@
 	.auto-grid {
 		display: grid;
 		grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size, 16rem), 1fr));
-		grid-gap: 1rem;
+		gap: 1rem;
 	}
 
 	.auto-grid > * {
