--- a/react-app/src/components/Nav/Nav.scss
+++ b/react-app/src/components/Nav/Nav.scss
@@ -1,5 +1,3 @@
-
-
 header {
 	text-align: center;
 	position: sticky;
@@ -8,7 +6,7 @@ header {
 	background-color: cornflowerblue;
 }
 
-nav {
+.nav {
 	position: absolute;
 	text-align: left;
 	top: 100%;
@@ -109,7 +107,7 @@ nav {
 		grid-column: 2 / 3;
 	}
 
-	nav {
+	.nav {
 		all: unset;
 		grid-column: 3 / 4;
 		display: flex;
@@ -117,21 +115,21 @@ nav {
 		align-items: center;
 	}
 
-	nav ul {
+	.nav ul {
 		display: flex;
 	}
 
-	nav li {
+	.nav li {
 		margin-left: 3em;
 		margin-bottom: 0;
 	}
 
-	nav a {
+	.nav a {
 		opacity: 1;
 		position: relative;
 	}
 
-	nav a::before {
+	.nav a::before {
 		content: '';
 		display: block;
 		height: 4px;
@@ -145,7 +143,7 @@ nav {
 		transition: transform ease-in-out 250ms;
 	}
 
-	nav a:hover::before {
+	.nav a:hover::before {
 		transform: scale(1,1);
 	}
 
@@ -159,6 +157,13 @@ nav {
 #shoppingCart {
 	position: absolute;
 	right: 2em;
+	top: 50%;
+	transform: translate(0, -50%);
+}
+
+#accountIcon {
+	position: absolute;
+	right: 6em;
 	top: 50%;
 	transform: translate(0, -50%);
 }
