--- a/react-app/src/components/Nav/Nav.scss
+++ b/react-app/src/components/Nav/Nav.scss
@@ -4,6 +4,8 @@ header {
 	z-index: 999;
 	width: 100%;
 	background-color: cornflowerblue;
+	font-family: "roboto";
+	font-weight: 500;
 }
 
 .nav {
