--- a/react-app/src/scss/_fonts.scss
+++ b/react-app/src/scss/_fonts.scss
@@ -1,3 +1,88 @@
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-Thin-webfont.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-ThinItalic-webfont.woff') format('woff');
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-Light-webfont.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-LightItalic-webfont.woff') format('woff');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-Regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-Italic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-Medium-webfont.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-MediumItalic-webfont.woff') format('woff');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-Bold-webfont.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-BoldItalic-webfont.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-Black-webfont.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/fonts/Roboto-BlackItalic-webfont.woff') format('woff');
+  font-weight: 900;
+  font-style: italic;
+}
+
+
 $type-ratios: (
   "minorSecond": 1.067,
   "majorSecond": 1.125,
@@ -73,6 +158,7 @@ h4 {
 
 body {
   font-size: $type-base-size;
-  font-family: "Merriweather Sans", sans-serif;
+  font-family: "roboto";
+  font-weight: 300;
   line-height: 1.5;
 }
