--- a/react-app/src/components/Shop/Prodotto/Prodotto.scss
+++ b/react-app/src/components/Shop/Prodotto/Prodotto.scss
@@ -1,28 +1,34 @@
 @use '../../../scss/index';
 
-.card {
+.product-wrapper {
 	width: 15rem;
-	height: 24rem;
+	height: 25rem;
 	background: white;
 	border-radius: 8px;
-	padding: 0.8rem;
 	text-decoration: none;
 	color: black;
-	box-shadow: 0 0 0.23em 0.23em rgba(0, 0, 0, 0.20);
+	box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 
 	&:hover {
-		box-shadow: 0 0 0.50em 0.50em rgba(0, 0, 0, 0.35);
+		box-shadow: 0 0 11px rgb(33 33 33 / 20%);
 	}
 }
 
-.product-image {
-	width: 15rem;
-	height: 14rem;
-	object-fit: scale-down;
+.product-wrapper > *:not(button, img){
+	margin-left: 1rem;
 }
 
-.prezzo {
-	font-family: "roboto";
+.product-image {
+	width: 100%;
+	height: 14rem;
+	object-fit: scale-down;
+	background: white;
+}
+
+.title {
 	font-weight: 500;
 }
 
@@ -33,7 +39,6 @@
 	-webkit-box-orient: vertical;
 }
 
-.container_btn_add_to_cart {
-	font-family: "roboto";
-	font-weight: 700;
+.price {
+	font-weight: 500;
 }
