--- a/react-app/src/components/Shop/Prodotto/Prodotto.scss
+++ b/react-app/src/components/Shop/Prodotto/Prodotto.scss
@@ -27,6 +27,8 @@
 	max-height: 14rem;
 	object-fit: scale-down;
 	background: white;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
 }
 
 .title {
