--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -155,6 +155,7 @@ header {
 }
 
 #shoppingCart {
+	width: 2rem;
 	position: absolute;
 	right: 2em;
 	top: 50%;
@@ -162,6 +163,7 @@ header {
 }
 
 #accountIcon {
+	width: 2rem;
 	position: absolute;
 	right: 6em;
 	top: 50%;
