changed global selector

--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -46,7 +46,7 @@ $mainColor: #007cc3;
 	width: 500px;
 }
 
-form {
+.form {
 	width: 360px;
 }
 
@@ -197,7 +197,7 @@ a:hover {
 }
 
 @media screen and (max-width: 1000px) {
-	form {
+	.form {
 		width: 290px;
 	}
 
