--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -152,7 +152,7 @@ $mainColor: #007cc3;
 	margin-bottom: 4px;
 }
 
-a {
+.forgot-password-anchor {
 	display: block;
 	text-align: right;
 	text-decoration: none;
@@ -161,7 +161,7 @@ a {
 	transition: 0.3s;
 }
 
-a:hover {
+.forgot-password-anchor:hover {
 	color: $mainColor;
 }
 
@@ -226,5 +226,9 @@ a:hover {
 
 	.login-content {
 		justify-content: center;
+	}
+
+	.forgot-password-anchor {
+		font-weight: 700;
 	}
 }
