styling dettaglio prodotto solo telefono

--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -154,6 +154,13 @@
 	}
 }
 
+@media screen and (max-width: 800px) {
+	.account-icon {
+		display: none;
+	}
+
+}
+
 .shopping-cart {
 	width: 2rem;
 	position: absolute;
