--- a/src/components/Admin/Prodotti/ProdAdmin.module.scss
+++ b/src/components/Admin/Prodotti/ProdAdmin.module.scss
@@ -1,3 +1,7 @@
 .prod-admin {
-	color: black;
+	border: none;
+	border-top: 1px solid rgb(199, 198, 198);
+	padding: 10px;
+	display: grid;
+	grid-template-columns: 8% 37.5% 37.5% 7% 10%;
 }
