--- a/src/components/Admin/Prodotti/Prodotti.module.scss
+++ b/src/components/Admin/Prodotti/Prodotti.module.scss
@@ -1,3 +1,11 @@
-.test {
-    color: black;
+.prodotti {
+	padding: 15px 25px 25px 25px;
+
+	.elemento {
+		border: none;
+		border-top: 1px solid rgb(199, 198, 198);
+		padding: 10px;
+		display: grid;
+		grid-template-columns: 8% 37.5% 37.5% 7% 10%;
+	}
 }
