--- a/src/components/DettaglioProdotto/DettaglioProdotto.module.scss
+++ b/src/components/DettaglioProdotto/DettaglioProdotto.module.scss
@@ -26,6 +26,22 @@
 .product-buy > * {
 }
 
+.product-title {
+	order: 2;
+}
+
+.product-image {
+	order: 1;
+}
+
+.product-buy {
+	order: 3;
+}
+
+.product-description {
+	order: 5;
+}
+
 .product-option, .product-price {
 	background: white;
 }
@@ -59,6 +75,6 @@
 	}
 
 	.product-description {
-		order: 5;
+		order: 4;
 	}
 }
