--- a/src/components/NotFound/NotFound.module.scss
+++ b/src/components/NotFound/NotFound.module.scss
@@ -1,33 +1,37 @@
 $mainColor: #007cc3;
 
-.wrapper {
-	display: flex;
-	place-content: center;
-	justify-content: center;
-}
-
+.wrapper,
 .wrapper-btn {
 	display: flex;
-	place-content: center;
 	justify-content: center;
+	align-items: center;
+}
 
-	.btn {
-		display: block;
-		border-radius: 25px;
-		outline: none;
-		border: none;
-		background-image: linear-gradient(to right, scale-color($mainColor, $lightness: -10%), $mainColor, scale-color($mainColor, $lightness: +10%));
-		background-size: 200%;
-		font-size: 1.2rem;
-		color: #fff;
-		font-family: 'Poppins', sans-serif;
-		text-transform: uppercase;
-		margin: 1rem 0;
-		padding: 1rem;
-		cursor: pointer;
-		transition: 0.5s;
+.wrapper {
+	flex-direction: column;
+	width: 100vw;
+	max-height: 100vh;
+	.img {
+		width: 800px;
+		height: 600px;
 	}
-	.btn:hover {
-		background-position: right;
+}
+
+@media screen and (min-width: 700px) {
+	.img {
+		background-image: url(../../assets/svg/notFound.svg);
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.wrapper {
+		width: 550px;
+		max-height: 100vh;
+	}
+
+	.img {
+		max-width: 200px;
+		max-height: 550px;
+		background-image: url(../../assets/svg/notFound-mobile.svg);
 	}
 }
