--- a/src/components/Admin/Admin.module.scss
+++ b/src/components/Admin/Admin.module.scss
@@ -1,56 +1,7 @@
 $main-color: #007cc3;
 $text: #ffffff;
 
-.admin {
-	background-color: $main-color;
-	padding: 1rem 1rem 1rem 2rem;
-	display: flex;
-	flex-direction: row;
-
-	.selectors {
-		list-style-type: none;
-		margin: 0;
-		padding: 2rem 0 2rem 0;
-		width: 10%;
-		height: 100%;
-		overflow: auto;
-
-		.active {
-			background-color: $text;
-			color: $main-color;
-		}
-
-		.selector {
-			border-bottom-left-radius: 1rem;
-			border-top-left-radius: 1rem;
-			padding: 0.5rem;
-
-			.a,
-			.a:visited,
-			.a:link,
-			.a:active,
-			.a:hover {
-				text-decoration: none;
-			}
-
-			.tex {
-				color: $text;
-			}
-			.main {
-				color: $main-color;
-			}
-		}
-
-		.icon {
-			width: 1rem;
-			height: 1rem;
-		}
-	}
-
-	.specs {
-		border-radius: 2rem;
-		background-color: $text;
-		padding: 1rem 1rem 1rem 2rem;
-		flex-grow: 1;
-	}
+.container {
+	width: 16rem;
+	min-height: 100vh;
 }
