--- a/src/components/Admin/Admin.module.scss
+++ b/src/components/Admin/Admin.module.scss
@@ -2,6 +2,73 @@ $main-color: #007cc3;
 $text: #ffffff;
 
 .container {
-	width: 16rem;
-	min-height: 100vh;
+	width: 100vw;
+	height: 100vh;
+}
+
+//MAIN SECTION
+
+//MAIN STYLING
+.main-content {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+//BOX
+
+.box-container {
+	display: flex;
+	gap: 1rem;
+}
+
+.box {
+	height: 7rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
+	padding: 2rem;
+
+	p,h4 {
+		line-height: .1rem;
+	}
+}
+
+.orders-box {
+	background-color: #c7f2ff;
+	border-radius: 50px 10px;
+}
+
+.profit-box {
+	background-color: #ffe5ee;
+	border-radius: 10px 50px;
+}
+
+//IMAGE SECTION
+
+.logo {
+	width: 3rem;
+}
+
+.icon {
+	width: 2.4rem;
+}
+
+//MEDIA QUERY
+
+@media screen and (max-width: 800px) {
+
+	.main-content {
+		max-width: 100vw;
+	}
+
+
+	.box-container {
+		flex-direction: column;
+	}
+	
 }
