--- a/src/components/Admin/Admin.module.scss
+++ b/src/components/Admin/Admin.module.scss
@@ -1,12 +1,15 @@
 $main-color: #007cc3;
 $text: #ffffff;
+$side-menu-color: black;
 
 .container {
-	width: 100vw;
-	height: 100vh;
-	p,h1,h2,h3,h4 {
-		color: #42427D;
-
+	overflow-x: hidden;
+	p,
+	h1,
+	h2,
+	h3,
+	h4 {
+		color: #42427d;
 	}
 }
 
@@ -14,12 +17,21 @@ $text: #ffffff;
 
 //MAIN STYLING
 .main-content {
+	background-color: white;
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
+	min-height: 100vh;
+	min-width: 100vw;
+	position: relative;
+	top: 0;
+	bottom: 100%;
+	left: 0;
+	z-index: 1;
+	padding: 4em;
 }
 
 //BOX
@@ -37,8 +49,9 @@ $text: #ffffff;
 	gap: 2rem;
 	padding: 2rem;
 
-	p,h4 {
-		line-height: .1rem;
+	p,
+	h4 {
+		line-height: 0.1rem;
 	}
 }
 
@@ -50,6 +63,64 @@ $text: #ffffff;
 .profit-box {
 	background-color: #ffe5ee;
 	border-radius: 10px 50px;
+}
+
+//SIDE-MENU
+
+.side-menu {
+	background-color: $side-menu-color;
+	list-style-type: none;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 0;
+	
+}
+
+.side-menu li {
+	
+	padding: 1em;
+	color: #fff;
+	width: 300px;
+	font-weight: 400;
+
+	&:hover {
+		background-color: darken(red, 10);
+	}
+}
+
+.lbl-for-side-btn {
+	position: fixed;
+	left: 15px;
+	top: 15px;
+	z-index: 2;
+	height: 30px;
+	width: 30px;
+	cursor: pointer;
+	background-image: url("../../assets/icons/menu.png");
+	background-size: contain;
+}
+
+.side-menu-btn {
+	position: absolute;
+	clip: rect(0, 0, 0, 0);
+}
+
+.side-menu-btn + label,
+.main-content {
+	transition: left 0.1s;
+}
+
+.side-menu-btn:checked + label {
+	left: 245px;
+}
+
+.side-menu-btn:checked ~ .main-content {
+	left: 230px;
 }
 
 //IMAGE SECTION
@@ -65,14 +136,11 @@ $text: #ffffff;
 //MEDIA QUERY
 
 @media screen and (max-width: 800px) {
-
 	.main-content {
 		max-width: 100vw;
 	}
 
-
 	.box-container {
 		flex-direction: column;
 	}
-	
 }
