--- a/src/components/Admin/Admin.module.scss
+++ b/src/components/Admin/Admin.module.scss
@@ -92,7 +92,7 @@ $main-color: #42427d;
 .side-menu li {
 	margin-left: 1rem;
 	padding: 1em;
-	width: 300px;
+	width: 14.3rem;
 	font-weight: 400;
 	display: flex;
 	justify-content: start;
