--- a/src/components/Admin/Admin.module.scss
+++ b/src/components/Admin/Admin.module.scss
@@ -14,66 +14,6 @@ $main-color: #42427d;
 	}
 }
 
-//MAIN SECTION
-
-//MAIN STYLING
-.main-content {
-	background-color: white;
-	display: flex;
-	flex-direction: column;
-	gap: 2rem;
-	justify-content: center;
-	align-items: start;
-	flex-wrap: wrap;
-	min-height: 100vh;
-	min-width: 100vw;
-	position: relative;
-	top: 0;
-	bottom: 100%;
-	left: 0;
-	z-index: 1;
-	padding: 2em;
-}
-
-//WELCOME-TEXT
-.welcome-text {
-	margin-top: 2rem;
-	span {
-		font-weight: 400;
-	}
-}
-
-//BOX
-
-.box-container {
-	display: flex;
-	gap: 1rem;
-}
-
-.box {
-	height: 7rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 2rem;
-	padding: 2rem;
-
-	p,
-	h4 {
-		line-height: 0.1rem;
-	}
-}
-
-.orders-box {
-	background-color: #c7f2ff;
-	border-radius: 50px 10px;
-}
-
-.profit-box {
-	background-color: #ffe5ee;
-	border-radius: 10px 50px;
-}
-
 //SIDE-MENU
 
 .side-menu {
@@ -87,6 +27,10 @@ $main-color: #42427d;
 	bottom: 0;
 	left: 0;
 	z-index: 0;
+
+	a {
+		text-decoration: none;
+	}
 }
 
 .side-menu li {
@@ -111,25 +55,8 @@ $main-color: #42427d;
 	}
 }
 
-.active {
-	background-color: white;
-	color: $main-color;
-	border-radius: 20px;
-	img {
-		filter: invert(22%) sepia(98%) saturate(414%) hue-rotate(202deg) brightness(91%) contrast(86%);
-	}
-}
-
-.non-active {
-	background-color: $side-menu-color;
-	color: $side-menu-text-color;
-	img {
-		filter: invert(75%) sepia(30%) saturate(240%) hue-rotate(187deg) brightness(87%) contrast(85%);
-	}
-}
-
 .lbl-for-side-btn {
-	position: fixed;
+	position: absolute;
 	left: 15px;
 	top: 15px;
 	z-index: 2;
@@ -158,24 +85,20 @@ $main-color: #42427d;
 	left: 230px;
 }
 
-//IMAGE SECTION
-
-.logo {
-	width: 3rem;
-}
-
-.box-icon {
-	width: 2.4rem;
-}
-
-//MEDIA QUERY
-
-@media screen and (max-width: 800px) {
-	.main-content {
-		max-width: 100vw;
-	}
-
-	.box-container {
-		flex-direction: column;
-	}
+.main-content {
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	justify-content: center;
+	align-items: start;
+	flex-wrap: wrap;
+	min-height: 100vh;
+	min-width: 100vw;
+	position: relative;
+	top: 0;
+	bottom: 100%;
+	left: 0;
+	z-index: 1;
+	padding: 2em;
 }
