Co-authored-by: AleFeri <AleFeri@users.noreply.github.com>

--- a/src/components/Admin/Prodotti/ProdAdmin.module.scss
+++ b/src/components/Admin/Prodotti/ProdAdmin.module.scss
@@ -3,6 +3,8 @@ $mainColor: #007cc3;
 .product-card {
 	width: 17rem;
 	height: 25rem;
+	padding-bottom: 1rem;
+	padding-top: .2rem;
 	background: white;
 	border-radius: 8px;
 	text-decoration: none;
