--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -1,183 +1,33 @@
-.header {
-	text-align: center;
-	position: sticky;
-	top: 0;
-	z-index: 999;
-	width: 100%;
-	background-color: cornflowerblue;
-	font-family: 'roboto';
-	font-weight: 500;
-}
 
-.nav {
-	position: absolute;
-	text-align: left;
-	top: 100%;
-	left: 0;
-	background: lightblue;
-	width: 100%;
-	transform: scale(1, 0);
-	transform-origin: top;
-	transition: transform 400ms ease-in-out;
-
-	ul {
-		margin: 0;
-		padding: 0;
-		list-style-type: none;
-	}
-
-	li {
-		margin-bottom: 1em;
-		margin-left: 1em;
-	}
-
-	a {
-		color: black;
-		text-decoration: none;
-		text-transform: uppercase;
-		opacity: 0;
-		transition: opacity 150ms ease-in-out;
-	}
-
-	a:hover {
-		color: red;
-	}
-}
-
-.nav-toggle:checked ~ .nav {
-	transform: scale(1, 1);
-}
-
-.nav-toggle {
-	position: absolute !important;
-	top: -9999px !important;
-	left: -9999px !important;
-}
-
-.nav-toggle-label {
-	position: absolute;
-	top: 0;
-	left: 0;
-	margin-left: 1em;
-	height: 100%;
-	display: flex;
-	align-items: center;
-}
-
-.nav-toggle-label span,
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-	display: block;
-	background: white;
-	height: 2px;
-	width: 1.5em;
-	border-radius: 2px;
-	position: relative;
-}
-
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-	content: '';
-	position: absolute;
-}
-
-.nav-toggle-label span::before {
-	bottom: 7px;
-}
-
-.nav-toggle-label span::after {
-	top: 7px;
-}
-
-.nav-toggle:checked ~ .nav a {
-	opacity: 1;
-	transition: opacity 250ms ease-in-out 200ms;
-}
-
-@media screen and (min-width: 800px) {
-	.nav-toggle-label {
-		display: none;
-	}
-
-	.header {
-		display: grid;
-		grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
-	}
-
-	.logo {
-		grid-column: 2 / 3;
-	}
-
-	.nav {
-		all: unset;
-		grid-column: 3 / 4;
-		display: flex;
-		justify-content: flex-end;
-		align-items: center;
-	}
-
-	.nav ul {
-		display: flex;
-	}
-
-	.nav li {
-		margin-left: 3em;
-		margin-bottom: 0;
-	}
-
-	.nav a {
-		opacity: 1;
-		position: relative;
-	}
-
-	.nav a::before {
-		content: '';
-		display: block;
-		height: 4px;
-		background-color: black;
-		position: absolute;
-		bottom: -0.75em;
-		left: 0;
-		right: 0;
-		transform: scale(0, 1);
-		transform-origin: left;
-		transition: transform ease-in-out 250ms;
-	}
-
-	.nav a:hover::before {
-		transform: scale(1, 1);
-	}
-
-	.shopping-cart {
-		position: absolute;
-		top: 50%;
-		transform: translate(0, -50%);
-	}
-}
-
-@media screen and (max-width: 800px) {
-	.account-icon {
-		display: none;
-	}
-
-}
-
-.shopping-cart {
+.cart {
 	width: 2rem;
-	position: absolute;
-	right: 2em;
-	top: 50%;
-	transform: translate(0, -50%);
-}
-
-.account-icon {
-	width: 2rem;
-	position: absolute;
-	right: 6em;
-	top: 50%;
-	transform: translate(0, -50%);
 }
 
 .logo {
 	width: 3rem;
 }
+
+.navbar {
+	a {
+		color: rgb(223, 213, 213);
+	}
+
+	a:hover {
+		color: white;
+	}
+}
+
+@media screen and (max-width: 990px) {
+	.logo {
+		position: absolute;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	.toggler {
+		margin-left: -2rem;
+	}
+}
+
