--- a/src/components/Admin/Prodotti/ModifyProduct.module.scss
+++ b/src/components/Admin/Prodotti/ModifyProduct.module.scss
@@ -13,6 +13,15 @@
 	}
 }
 
+
+.dropzone.dropzone {
+	img {
+		width: 100%;
+		max-height: 500px;
+		object-fit: scale-down;
+	}
+}
+
 @media screen and (max-width: 600px) {
 	.id {
 		margin-top: 0rem;
@@ -37,7 +46,8 @@
 }
 
 @media screen and (max-width: 1200px) {
-	.dropzone.dropzone {
+	.dropzone.dropzone,
+	.dropzone-files.dropzone-files {
 		max-width: 100%;
 		width: 100%;
 	}
