--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,4 +1,5 @@
 .container {
+	background-color: white;
 	p,
 	a,
 	h1,
@@ -10,5 +11,19 @@
 	img {
 		width: 800px;
 		height: 600px;
+		object-fit: contain;
+	}
+
+	ol {
+		background: #ffffff66;
+		li {
+			margin-left: 2px;
+			margin-right: 2px;
+			border: 1px solid #262b40;
+			background-color: #262b40;
+			border-radius: 0px;
+			height: 5px;
+			width: 20px;
+		}
 	}
 }
